@@ -21,15 +21,16 @@ package org.apache.fineract.infrastructure.campaigns.sms.constants;
 import java.time.Month;
 import java.util.ArrayList;
 import java.util.List;
-
 import org.apache.fineract.infrastructure.campaigns.constants.CampaignType;
 import org.apache.fineract.infrastructure.core.data.EnumOptionData;
 import org.apache.fineract.portfolio.common.domain.PeriodFrequencyType;
 
+public final class SmsCampaignEnumerations {
 
-public class SmsCampaignEnumerations {
+    private SmsCampaignEnumerations() {
 
-    
+    }
+
     public static EnumOptionData smscampaignTriggerType(final SmsCampaignTriggerType type) {
         EnumOptionData optionData = new EnumOptionData(SmsCampaignTriggerType.INVALID.getValue().longValue(),
                 SmsCampaignTriggerType.INVALID.getCode(), "Invalid");
@@ -62,21 +63,25 @@ public class SmsCampaignEnumerations {
                 optionData = new EnumOptionData(CampaignType.SMS.getValue().longValue(), CampaignType.SMS.getCode(), "SMS");
             break;
             case NOTIFICATION:
-                optionData = new EnumOptionData(CampaignType.NOTIFICATION.getValue().longValue(), CampaignType.NOTIFICATION.getCode(), "NOTIFICATION");
+                optionData = new EnumOptionData(CampaignType.NOTIFICATION.getValue().longValue(), CampaignType.NOTIFICATION.getCode(),
+                        "NOTIFICATION");
             break;
         }
         return optionData;
     }
 
     public static EnumOptionData calendarMonthType(final Month entityType) {
-        final EnumOptionData optionData = new EnumOptionData(new Long(entityType.getValue()), entityType.name(), entityType.name());
+        final EnumOptionData optionData = new EnumOptionData(Long.valueOf(entityType.getValue()), entityType.name(), entityType.name());
         return optionData;
     }
 
     public static List<EnumOptionData> calendarMonthType() {
         final List<EnumOptionData> optionDatas = new ArrayList<>();
         for (final Month monthType : Month.values()) {
-            if (Month.DECEMBER.compareTo(monthType) != 0) { //We are removing December because we are adding yearly frequency
+            if (Month.DECEMBER.compareTo(monthType) != 0) { // We are removing
+                                                            // December because
+                                                            // we are adding
+                                                            // yearly frequency
                 optionDatas.add(calendarMonthType(monthType));
             }
         }
@@ -86,11 +91,11 @@ public class SmsCampaignEnumerations {
     public static List<EnumOptionData> calendarPeriodFrequencyTypes(final PeriodFrequencyType[] periodFrequencyTypes) {
         final List<EnumOptionData> optionDatas = new ArrayList<>();
         for (final PeriodFrequencyType periodFrequencyType : periodFrequencyTypes) {
-        	if(!periodFrequencyType.getValue().equals(PeriodFrequencyType.INVALID.getValue())) {
-        		final EnumOptionData optionData = new EnumOptionData(periodFrequencyType.getValue().longValue(), periodFrequencyType.getCode(),
-                        periodFrequencyType.toString());
-                optionDatas.add(optionData);	
-        	}
+            if (!periodFrequencyType.getValue().equals(PeriodFrequencyType.INVALID.getValue())) {
+                final EnumOptionData optionData = new EnumOptionData(periodFrequencyType.getValue().longValue(),
+                        periodFrequencyType.getCode(), periodFrequencyType.toString());
+                optionDatas.add(optionData);
+            }
         }
         return optionDatas;
     }
