@@ -18,13 +18,13 @@
  */
 package org.apache.fineract.infrastructure.configuration.serialization;
 
+import com.google.gson.reflect.TypeToken;
 import java.lang.reflect.Type;
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
-
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.fineract.infrastructure.configuration.command.UpdateGlobalConfigurationCommand;
 import org.apache.fineract.infrastructure.core.exception.InvalidJsonException;
 import org.apache.fineract.infrastructure.core.serialization.AbstractFromApiJsonDeserializer;
@@ -33,20 +33,17 @@ import org.apache.fineract.infrastructure.core.serialization.FromJsonHelper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import com.google.gson.reflect.TypeToken;
-
 /**
- * Implementation of {@link FromApiJsonDeserializer} for
- * {@link UpdateGlobalConfigurationCommand}'s.
+ * Implementation of {@link FromApiJsonDeserializer} for {@link UpdateGlobalConfigurationCommand}'s.
  */
 @Component
-public final class GlobalConfigurationCommandFromApiJsonDeserializer extends
-        AbstractFromApiJsonDeserializer<UpdateGlobalConfigurationCommand> {
+public final class GlobalConfigurationCommandFromApiJsonDeserializer
+        extends AbstractFromApiJsonDeserializer<UpdateGlobalConfigurationCommand> {
 
     /**
      * The parameters supported for this command.
      */
-    private final Set<String> supportedParameters = new HashSet<>(Arrays.asList("globalConfiguration"));
+    private static final Set<String> SUPPORTED_PARAMETERS = new HashSet<>(List.of("globalConfiguration"));
     private final FromJsonHelper fromApiJsonHelper;
 
     @Autowired
@@ -57,10 +54,12 @@ public final class GlobalConfigurationCommandFromApiJsonDeserializer extends
     @Override
     public UpdateGlobalConfigurationCommand commandFromApiJson(final String json) {
 
-        if (StringUtils.isBlank(json)) { throw new InvalidJsonException(); }
+        if (StringUtils.isBlank(json)) {
+            throw new InvalidJsonException();
+        }
 
         final Type typeOfMap = new TypeToken<Map<String, Object>>() {}.getType();
-        this.fromApiJsonHelper.checkForUnsupportedParameters(typeOfMap, json, this.supportedParameters);
+        this.fromApiJsonHelper.checkForUnsupportedParameters(typeOfMap, json, SUPPORTED_PARAMETERS);
 
         return this.fromApiJsonHelper.fromJson(json, UpdateGlobalConfigurationCommand.class);
     }
