@@ -18,10 +18,10 @@
  */
 package org.apache.fineract.portfolio.shareaccounts.domain;
 
-import java.util.Date;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.HashSet;
 import java.util.Set;
-
 import javax.persistence.CascadeType;
 import javax.persistence.Column;
 import javax.persistence.Embedded;
@@ -33,11 +33,9 @@ import javax.persistence.JoinColumn;
 import javax.persistence.ManyToOne;
 import javax.persistence.OneToMany;
 import javax.persistence.Table;
-import javax.persistence.Temporal;
-import javax.persistence.TemporalType;
 import javax.persistence.Transient;
-
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.fineract.infrastructure.core.domain.AbstractPersistableCustom;
 import org.apache.fineract.infrastructure.security.service.RandomPasswordGenerator;
 import org.apache.fineract.organisation.monetary.domain.MonetaryCurrency;
 import org.apache.fineract.portfolio.client.domain.Client;
@@ -45,69 +43,62 @@ import org.apache.fineract.portfolio.common.domain.PeriodFrequencyType;
 import org.apache.fineract.portfolio.savings.domain.SavingsAccount;
 import org.apache.fineract.portfolio.shareproducts.domain.ShareProduct;
 import org.apache.fineract.useradministration.domain.AppUser;
-import org.apache.fineract.infrastructure.core.domain.AbstractPersistableCustom;
 
 @Entity
 @Table(name = "m_share_account")
-public class ShareAccount extends AbstractPersistableCustom<Long> {
+public class ShareAccount extends AbstractPersistableCustom {
 
     @ManyToOne
-    @JoinColumn(name = "client_id", nullable = true)
+    @JoinColumn(name = "client_id")
     private Client client;
 
     @ManyToOne
-    @JoinColumn(name = "product_id", nullable = true)
+    @JoinColumn(name = "product_id")
     private ShareProduct shareProduct;
 
     @Column(name = "status_enum", nullable = false)
     protected Integer status;
 
     @Column(name = "submitted_date")
-    @Temporal(TemporalType.DATE)
-    private Date submittedDate;
+    private LocalDate submittedDate;
 
     @ManyToOne(optional = true)
-    @JoinColumn(name = "submitted_userid", nullable = true)
+    @JoinColumn(name = "submitted_userid")
     protected AppUser submittedBy;
 
-    @Temporal(TemporalType.DATE)
     @Column(name = "approved_date")
-    protected Date approvedDate;
+    protected LocalDate approvedDate;
 
     @ManyToOne(optional = true)
-    @JoinColumn(name = "approved_userid", nullable = true)
+    @JoinColumn(name = "approved_userid")
     protected AppUser approvedBy;
 
-    @Temporal(TemporalType.DATE)
     @Column(name = "rejected_date")
-    protected Date rejectedDate;
+    protected LocalDate rejectedDate;
 
     @ManyToOne(optional = true)
-    @JoinColumn(name = "rejected_userid", nullable = true)
+    @JoinColumn(name = "rejected_userid")
     protected AppUser rejectedBy;
 
-    @Temporal(TemporalType.DATE)
-    @Column(name = "activated_date", nullable = true)
-    protected Date activatedDate;
+    @Column(name = "activated_date")
+    protected LocalDate activatedDate;
 
     @ManyToOne(optional = true)
-    @JoinColumn(name = "activated_userid", nullable = true)
+    @JoinColumn(name = "activated_userid")
     protected AppUser activatedBy;
 
-    @Temporal(TemporalType.DATE)
     @Column(name = "closed_date")
-    protected Date closedDate;
+    protected LocalDate closedDate;
 
     @ManyToOne(optional = true)
-    @JoinColumn(name = "closed_userid", nullable = true)
+    @JoinColumn(name = "closed_userid")
     protected AppUser closedBy;
 
-    @Temporal(TemporalType.DATE)
     @Column(name = "lastmodified_date")
-    protected Date modifiedDate;
+    protected LocalDateTime modifiedDate;
 
     @ManyToOne(optional = true)
-    @JoinColumn(name = "lastmodifiedby_id", nullable = true)
+    @JoinColumn(name = "lastmodifiedby_id")
     protected AppUser modifiedBy;
 
     @Column(name = "external_id")
@@ -129,27 +120,27 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
     private Boolean allowDividendCalculationForInactiveClients;
 
     @ManyToOne
-    @JoinColumn(name = "savings_account_id", nullable = true)
+    @JoinColumn(name = "savings_account_id")
     private SavingsAccount savingsAccount;
 
-    @OneToMany(cascade = CascadeType.ALL, mappedBy = "shareAccount", orphanRemoval = true, fetch=FetchType.EAGER)
+    @OneToMany(cascade = CascadeType.ALL, mappedBy = "shareAccount", orphanRemoval = true, fetch = FetchType.EAGER)
     private Set<ShareAccountTransaction> shareAccountTransactions;
 
     @Column(name = "lockin_period_frequency")
     private Integer lockinPeriodFrequency;
 
     @Enumerated(EnumType.ORDINAL)
-    @Column(name = "lockin_period_frequency_enum", nullable = true)
+    @Column(name = "lockin_period_frequency_enum")
     private PeriodFrequencyType lockinPeriodFrequencyType;
 
     @Column(name = "minimum_active_period_frequency")
     private Integer minimumActivePeriodFrequency;
 
     @Enumerated(EnumType.ORDINAL)
-    @Column(name = "minimum_active_period_frequency_enum", nullable = true)
+    @Column(name = "minimum_active_period_frequency_enum")
     private PeriodFrequencyType minimumActivePeriodFrequencyType;
 
-    @OneToMany(cascade = CascadeType.ALL, mappedBy = "shareAccount", orphanRemoval = true, fetch=FetchType.EAGER)
+    @OneToMany(cascade = CascadeType.ALL, mappedBy = "shareAccount", orphanRemoval = true, fetch = FetchType.EAGER)
     private Set<ShareAccountCharge> charges;
 
     @Transient
@@ -164,8 +155,9 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
             final Set<ShareAccountTransaction> purchasedShares, final Boolean allowDividendCalculationForInactiveClients,
             final Integer lockinPeriodFrequency, final PeriodFrequencyType lockPeriodType, final Integer minimumActivePeriodFrequency,
             final PeriodFrequencyType minimumActivePeriodType, Set<ShareAccountCharge> charges, AppUser submittedBy,
-            final Date submittedDate, AppUser approvedBy, Date approvedDate, AppUser rejectedBy, Date rejectedDate, AppUser activatedBy,
-            Date activatedDate, AppUser closedBy, Date closedDate, AppUser modifiedBy, Date modifiedDate) {
+            final LocalDate submittedDate, AppUser approvedBy, LocalDate approvedDate, AppUser rejectedBy, LocalDate rejectedDate,
+            AppUser activatedBy, LocalDate activatedDate, AppUser closedBy, LocalDate closedDate, AppUser modifiedBy,
+            LocalDateTime modifiedDate) {
 
         this.client = client;
         this.shareProduct = shareProduct;
@@ -215,18 +207,18 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
         return this.shareProduct;
     }
 
-    public boolean setSubmittedDate(final Date submittedDate) {
+    public boolean setSubmittedDate(final LocalDate submittedDate) {
         boolean toReturn = false;
-        if (!this.submittedDate.equals(submittedDate)) {
+        if (this.submittedDate.compareTo(submittedDate) == 0 ? Boolean.FALSE : Boolean.TRUE) {
             this.submittedDate = submittedDate;
             toReturn = true;
         }
         return toReturn;
     }
 
-    public boolean setApprovedDate(final Date approvedDate) {
+    public boolean setApprovedDate(final LocalDate approvedDate) {
         boolean toReturn = false;
-        if (!this.approvedDate.equals(approvedDate)) {
+        if (this.approvedDate.compareTo(approvedDate) == 0 ? Boolean.FALSE : Boolean.TRUE) {
             this.approvedDate = approvedDate;
             toReturn = true;
         }
@@ -258,27 +250,28 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
 
     public void addTransaction(final ShareAccountTransaction transaction) {
         transaction.setShareAccount(this);
-        if(transaction.isPendingForApprovalTransaction()) {
-            if(this.totalSharesPending == null) {
-                this.totalSharesPending = transaction.getTotalShares() ;
-            }else {
-                this.totalSharesPending += transaction.getTotalShares() ;    
+        if (transaction.isPendingForApprovalTransaction()) {
+            if (this.totalSharesPending == null) {
+                this.totalSharesPending = transaction.getTotalShares();
+            } else {
+                this.totalSharesPending += transaction.getTotalShares();
             }
-            
-        }else if(transaction.isPurchasTransaction()) {
-            if(this.totalSharesApproved == null) {
-                this.totalSharesApproved = transaction.getTotalShares() ; 
-            }else {
-                this.totalSharesApproved += transaction.getTotalShares() ;
+
+        } else if (transaction.isPurchasTransaction()) {
+            if (this.totalSharesApproved == null) {
+                this.totalSharesApproved = transaction.getTotalShares();
+            } else {
+                this.totalSharesApproved += transaction.getTotalShares();
             }
         }
-        
+
         this.shareAccountTransactions.add(transaction);
     }
-    
+
     public boolean setAllowDividendCalculationForInactiveClients(Boolean allowDividendCalculationForInactiveClients) {
         boolean returnValue = false;
-        if (this.allowDividendCalculationForInactiveClients == null || !this.allowDividendCalculationForInactiveClients.equals(allowDividendCalculationForInactiveClients)) {
+        if (this.allowDividendCalculationForInactiveClients == null
+                || !this.allowDividendCalculationForInactiveClients.equals(allowDividendCalculationForInactiveClients)) {
             this.allowDividendCalculationForInactiveClients = allowDividendCalculationForInactiveClients;
             returnValue = true;
         }
@@ -296,7 +289,8 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
 
     public boolean setLockPeriodFrequencyEnum(final PeriodFrequencyType lockinPeriodFrequencyType) {
         boolean returnValue = false;
-        if (this.lockinPeriodFrequencyType == null || !this.lockinPeriodFrequencyType.getValue().equals(lockinPeriodFrequencyType.getValue())) {
+        if (this.lockinPeriodFrequencyType == null
+                || !this.lockinPeriodFrequencyType.getValue().equals(lockinPeriodFrequencyType.getValue())) {
             this.lockinPeriodFrequencyType = lockinPeriodFrequencyType;
             returnValue = true;
         }
@@ -314,7 +308,8 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
 
     public boolean setminimumActivePeriodTypeEnum(final PeriodFrequencyType minimumActivePeriodForDividends) {
         boolean returnValue = false;
-        if (this.minimumActivePeriodFrequencyType == null || !this.minimumActivePeriodFrequencyType.getValue().equals(minimumActivePeriodForDividends.getValue())) {
+        if (this.minimumActivePeriodFrequencyType == null
+                || !this.minimumActivePeriodFrequencyType.getValue().equals(minimumActivePeriodForDividends.getValue())) {
             this.minimumActivePeriodFrequencyType = minimumActivePeriodForDividends;
             returnValue = true;
         }
@@ -344,9 +339,9 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
     }
 
     public Client getClient() {
-        return this.client ;
+        return this.client;
     }
-    
+
     public String getSavingsAccountNo() {
         return this.savingsAccount.getAccountNumber();
     }
@@ -370,9 +365,9 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
     }
 
     public void updateRequestedShares(ShareAccountTransaction purchased) {
-    	for(ShareAccountTransaction transaction: this.shareAccountTransactions) {
-            if(!transaction.isChargeTransaction() && transaction.getId().equals(purchased.getId())) {
-                transaction.update(purchased.getPurchasedDate(), purchased.getTotalShares(), purchased.getPurchasePrice());    
+        for (ShareAccountTransaction transaction : this.shareAccountTransactions) {
+            if (!transaction.isChargeTransaction() && transaction.getId().equals(purchased.getId())) {
+                transaction.update(purchased.getPurchasedDate(), purchased.getTotalShares(), purchased.getPurchasePrice());
             }
         }
     }
@@ -396,7 +391,7 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
         this.charges.add(charge);
     }
 
-    public void approve(final Date approvedDate, final AppUser approvedUser) {
+    public void approve(final LocalDate approvedDate, final AppUser approvedUser) {
         this.approvedDate = approvedDate;
         this.approvedBy = approvedUser;
         for (ShareAccountTransaction transaction : this.shareAccountTransactions) {
@@ -407,7 +402,7 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
         this.totalSharesPending = null;
     }
 
-    public void activate(final Date approvedDate, final AppUser approvedUser) {
+    public void activate(final LocalDate approvedDate, final AppUser approvedUser) {
         this.activatedDate = approvedDate;
         this.activatedBy = approvedUser;
         this.status = ShareAccountStatusType.ACTIVE.getValue();
@@ -422,36 +417,37 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
         this.closedDate = null;
         this.closedBy = null;
         this.totalSharesApproved = null;
-        Long tempTotalShares = new Long(0);
+        Long tempTotalShares = Long.valueOf(0);
         for (ShareAccountTransaction transaction : this.shareAccountTransactions) {
-            if(transaction.isPurchasTransaction()) {
+            if (transaction.isPurchasTransaction()) {
                 transaction.undoApprove();
-                tempTotalShares += transaction.getTotalShares() ;
+                tempTotalShares += transaction.getTotalShares();
             }
         }
         this.totalSharesPending = tempTotalShares;
     }
 
-    public void reject(final Date rejectedDate, final AppUser rejectedUser) {
+    public void reject(final LocalDate rejectedDate, final AppUser rejectedUser) {
         this.rejectedDate = rejectedDate;
         this.rejectedBy = rejectedUser;
         this.status = ShareAccountStatusType.REJECTED.getValue();
         this.totalSharesPending = null;
         this.totalSharesApproved = null;
         for (ShareAccountTransaction transaction : this.shareAccountTransactions) {
-            if(transaction.isPendingForApprovalTransaction()) {
+            if (transaction.isPendingForApprovalTransaction()) {
                 transaction.reject();
             }
         }
     }
 
-    public void close(final Date closedDate, final AppUser closedBy) {
-        this.closedDate = closedDate ;
-        this.closedBy = closedBy ;
-        this.status = ShareAccountStatusType.CLOSED.getValue() ;
+    public void close(final LocalDate closedDate, final AppUser closedBy) {
+        this.closedDate = closedDate;
+        this.closedBy = closedBy;
+        this.status = ShareAccountStatusType.CLOSED.getValue();
         this.totalSharesPending = null;
         this.totalSharesApproved = null;
     }
+
     public String getAccountNumber() {
         return this.accountNumber;
     }
@@ -500,9 +496,9 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
     }
 
     public Long getTotalApprovedShares() {
-        return this.totalSharesApproved ;
+        return this.totalSharesApproved;
     }
-    
+
     public void removePendingShares(Long totalShares) {
         this.totalSharesPending -= totalShares;
     }
@@ -512,63 +508,63 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
     }
 
     public void setTotalPendingShares(final Long shares) {
-        this.totalSharesPending = shares ;
+        this.totalSharesPending = shares;
     }
-    
+
     public ShareAccountTransaction getShareAccountTransaction(final ShareAccountTransaction transaction) {
         ShareAccountTransaction returnTrans = null;
         for (ShareAccountTransaction tran : this.shareAccountTransactions) {
-            if (tran.getPurchasedDate().equals(transaction.getPurchasedDate())
-                    && tran.getTotalShares().equals(transaction.getTotalShares())
-                    && tran.getPurchasePrice().equals(transaction.getPurchasePrice())
-                    && tran.getTransactionStatus().equals(transaction.getTransactionStatus())
-                    && tran.getTransactionType().equals(transaction.getTransactionType())) {
+            if (tran.getPurchasedDate().compareTo(transaction.getPurchasedDate()) == 0 ? Boolean.TRUE
+                    : Boolean.FALSE && tran.getTotalShares().equals(transaction.getTotalShares())
+                            && tran.getPurchasePrice().compareTo(transaction.getPurchasePrice()) == 0 ? Boolean.TRUE
+                                    : Boolean.FALSE && tran.getTransactionStatus().equals(transaction.getTransactionStatus())
+                                            && tran.getTransactionType().equals(transaction.getTransactionType())) {
                 returnTrans = tran;
                 break;
             }
         }
         return returnTrans;
     }
-    
-    public Date getSubmittedDate(){
-        return this.submittedDate ;
+
+    public LocalDate getSubmittedDate() {
+        return this.submittedDate;
     }
-    
-    public Date getApprovedDate() {
-        return this.approvedDate ;
+
+    public LocalDate getApprovedDate() {
+        return this.approvedDate;
     }
 
     public void removeTransactions() {
-        for(ShareAccountTransaction transaction: this.shareAccountTransactions) {
+        for (ShareAccountTransaction transaction : this.shareAccountTransactions) {
             transaction.setActive(false);
         }
-        this.totalSharesApproved = new Long(0) ;
-        this.totalSharesPending = new Long(0) ;
+        this.totalSharesApproved = Long.valueOf(0);
+        this.totalSharesPending = Long.valueOf(0);
     }
 
     public void removeCharges() {
-        for(ShareAccountCharge charge: this.charges) {
+        for (ShareAccountCharge charge : this.charges) {
             charge.setActive(false);
         }
     }
 
     public void addCharges(Set<ShareAccountCharge> charges) {
-        this.charges.addAll(charges) ;
+        this.charges.addAll(charges);
     }
-    
+
     public Integer getLockinPeriodFrequency() {
-        return this.lockinPeriodFrequency ;
+        return this.lockinPeriodFrequency;
     }
-    
-    public  PeriodFrequencyType getLockinPeriodFrequencyType() {
-        return this.lockinPeriodFrequencyType ;
+
+    public PeriodFrequencyType getLockinPeriodFrequencyType() {
+        return this.lockinPeriodFrequencyType;
     }
-    
-    public Date getActivatedDate() {
-        return this.activatedDate ;
+
+    public LocalDate getActivatedDate() {
+        return this.activatedDate;
     }
-    
+
     public Integer status() {
-        return this.status ;
+        return this.status;
     }
 }
